# internal/services/api/backstage/login_logout_service.go
@@ -12,15 +12,15 @@ import (
 	"github.com/pkg/errors"
 )
 
-type LoginLoutService struct {
+type LoginLogoutService struct {
 }
 
-func GetLoginLoutService() *LoginLoutService {
-	return &LoginLoutService{}
+func GetLoginLogoutService() *LoginLogoutService {
+	return &LoginLogoutService{}
 }
 
 //登入
-func (u *LoginLoutService) Login(loginDTO *backstagedto.LoginDTO) (interface{}, error) {
+func (l *LoginLogoutService) Login(loginDTO *backstagedto.LoginDTO) (interface{}, error) {
 
 	userService := GetUserService()
 	user := userService.GetUserByLoginName(loginDTO.LoginName)
@@ -38,7 +38,7 @@ func (u *LoginLoutService) Login(loginDTO *backstagedto.LoginDTO) (interface{}, 
 	//todo jwt token refresh token
 	jwtToken, errT := utils.GenJwt(user.Id, user.Name)
 	refreshToken, errR := utils.GenRefJwt(user.Id, user.Name)
-	if errT != nil {
+	if errT != nil || errR != nil {
 		errToken := errors.WithMessage(errors.WithStack(errT), errorcode.GENERATE_JWT_ERROR)
 		errRefToken := errors.WithMessage(errors.WithStack(errR), errorcode.GENERATE_REFRESH_JWT_ERROR)
 		log.Error(fmt.Sprintf("%+v,%+v", errToken, errRefToken))
@@ -57,5 +57,30 @@ func (u *LoginLoutService) Login(loginDTO *backstagedto.LoginDTO) (interface{}, 
 		AuthorityJwt: &backstagedto.JwtTokenDTO{Token: jwtToken, RefreshToken: refreshToken},
 	}
 
+	return res, nil
+}
+
+//刷新 RefreshToken
+func (l *LoginLogoutService) RefreshToken(refToken *backstagedto.JwtRefTokenDTO) (interface{}, error) {
+
+	jwtInfoDTO, err := utils.ValidateAndRefreshTokenCheck(refToken.RefreshToken)
+	if err != nil {
+		return nil, err
+	}
+
+	//todo jwt token refresh token
+	jwtToken, errT := utils.GenJwt(jwtInfoDTO.Id, jwtInfoDTO.Name)
+	refreshToken, errR := utils.GenRefJwt(jwtInfoDTO.Id, jwtInfoDTO.Name)
+	if errT != nil || errR != nil {
+		errToken := errors.WithMessage(errors.WithStack(errT), errorcode.GENERATE_JWT_ERROR)
+		errRefToken := errors.WithMessage(errors.WithStack(errR), errorcode.GENERATE_REFRESH_JWT_ERROR)
+		log.Error(fmt.Sprintf("%+v,%+v", errToken, errRefToken))
+		return nil, utils.CreateApiErr(errorcode.SERVER_ERROR_CODE, errorcode.GENERATE_JWT_ERROR)
+	}
+
+	res := &backstagedto.LoginResponseDTO{
+		UserInfo:     &backstagedto.JwtInfoDTO{Id: jwtInfoDTO.Id, Name: jwtInfoDTO.Name},
+		AuthorityJwt: &backstagedto.JwtTokenDTO{Token: jwtToken, RefreshToken: refreshToken},
+	}
 	return res, nil
 }
